--- a/index.html
+++ b/index.html
@@ -27,13 +27,11 @@
           <li>Phone: <a href="tel:+420776156490">+420776156490</a></li>
           <li>
             Email:
-            <a href="mailto:perchak00@gmail.com">perchak00@gmail.com</a>
+            <a href="mailto:Perchak00@gmail.com">perchak00@gmail.com</a>
           </li>
           <li>
             Telegram:
-            <a href="https://https://web.telegram.org/a/#417060961">
-              Ivan Perchak</a
-            >
+            <a href="https://web.telegram.org/a/#1054818392"> Ivan Perchak</a>
           </li>
           <li>
             LinkedIn:
@@ -45,7 +43,8 @@
           </li>
           <li>
             Location:
-            <a href="https://maps.app.goo.gl/C2faa2FxK1v27mVS8"
+            <a
+              href="https://www.google.com/maps/place/%D0%9F%D1%80%D0%B0%D0%B3%D0%B0/@50.059553,14.300817,11z/data=!3m1!4b1!4m6!3m5!1s0x470b939c0970798b:0x400af0f66164090!8m2!3d50.0755381!4d14.4378005!16zL20vMDV5d2c?entry=ttu&g_ep=EgoyMDI0MTAxNi4wIKXMDSoASAFQAw%3D%3D"
               >Prague, Czech Republic</a
             >
           </li>
@@ -122,7 +121,7 @@
           </li>
           <li>
             <strong
-              ><a href="goit-react-hw-05-navy-five.vercel.app"
+              ><a href="https://goit-react-hw-05-navy-five.vercel.app/movies"
                 >Movie search</a
               ></strong
             >
@@ -131,7 +130,9 @@
           </li>
           <li>
             <strong>
-              <a href="goit-react-hw-08-green-phi.vercel.app">Contacts book</a>
+              <a href="https://goit-react-hw-08-green-phi.vercel.app/"
+                >Contacts book</a
+              >
             </strong>
             - The "Contact Book" application with the possibility of
             registration and login, as well as working with a private collection
